# CMake

cmake01/src/: main.cpp
cmake02/lib/: CMakeLists.txt  hello.cpp
cmake03/src/: CMakeLists.txt  REMADE.md
cmake_dll/: CMakeLists.txt
cmake_dll/test_xlog/: CMakeLists.txt  test_xlog.cpp
cmake_dll/xlog/: CMakeLists.txt  xlog.h
cmake_lib/test_xlog/: test_xlog.cpp
cmake_lib/xlog/: xlog.cpp  xlog.h
